--- a/src/testBundle/Resources/config/doctrine/Reservation.orm.yml
+++ b/src/testBundle/Resources/config/doctrine/Reservation.orm.yml
@@ -9,3 +9,8 @@ testBundle\Entity\Reservation:
             generator:
                 strategy: AUTO
     lifecycleCallbacks: {  }
+
+    manyToMany:
+        passengers:
+            targetEntity: User
+            mappedBy: reservation
