--- a/src/testBundle/Resources/config/routing.yml
+++ b/src/testBundle/Resources/config/routing.yml
@@ -5,3 +5,12 @@ test_test_symfony:
 test_homepage:
     path:     /
     defaults: { _controller: testBundle:Default:index }
+
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
